--- a/style.css
+++ b/style.css
@@ -2,19 +2,33 @@ html {
     background-color: #f1faee;
     width: 100%;
     height: 100%;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
+    color:#1d3557;
+    line-height: 25px;
   }
   #title {
     font-size: 50px;
     text-align: center;
     color: #1d3557;
+    background-color: #a8dadc;
   }
   
-  h3 {
+  h1 {
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+  }
+
+  h2 {
     font-size: 15px;
     text-align: center;
   }
   
+  h3 {
+    font-size: larger;
+    text-align: center;
+  }
+
   img {
     display: block;
     margin-left: auto;
@@ -24,7 +38,7 @@ html {
   }
   #img-div {
     margin: auto;
-    width: auto;
+    width: 1000px;
     max-width: 100%;
   }
   #img-caption {
@@ -38,4 +52,13 @@ html {
   
   #tribute-link {
     text-align: center;
+  }
+
+  #footer {
+      text-align: center;
+    background-color: #a8dadc;
+  }
+
+  #bio {
+      text-align: justify;
   }
