--- a/style.css
+++ b/style.css
@@ -56,9 +56,14 @@ html {
 
   #footer {
       text-align: center;
-    background-color: #a8dadc;
+    background-color: #a8dadc; 
   }
 
   #bio {
       text-align: justify;
+  }
+ 
+  #by {
+      text-align: right;
+      padding-right: 20px;
   }
